--- a/package.json
+++ b/package.json
@@ -31,11 +31,17 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "css-loader": "^3.4.2",
     "jquery": "^3.4.1",
     "mapbox-gl": "^1.7.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.2.3",
-    "react-visibility-sensor": "^5.1.1"
+    "react-visibility-sensor": "^5.1.1",
+    "reset-css": "^5.0.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3"
   }
 }
