--- a/package.json
+++ b/package.json
@@ -20,18 +20,22 @@
   "homepage": "https://github.com/NazarenoL/travellog#readme",
   "devDependencies": {
     "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "redux-devtools": "^3.5.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "css-loader": "^3.4.2",
+    "d3-ease": "^1.0.6",
     "jquery": "^3.4.1",
     "mapbox-gl": "^1.7.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -39,7 +43,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.2.3",
+    "react-redux": "^7.2.0",
     "react-visibility-sensor": "^5.1.1",
+    "redux": "^4.0.5",
     "reset-css": "^5.0.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3"
