--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "d3-ease": "^1.0.6",
     "jquery": "^3.4.1",
     "mapbox-gl": "^1.7.0",
+    "marked": "^0.8.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
