--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.2.3",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-visibility-sensor": "^5.1.1",
     "redux": "^4.0.5",
     "reset-css": "^5.0.1",
