--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mapbox-gl": "^1.7.0",
     "marked": "^0.8.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "netlify-cms-app": "^2.12.7",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
