--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "redux-devtools": "^3.5.0",
+    "speed-measure-webpack-plugin": "^1.3.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
