--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@geo-maps/countries-land-10km": "^0.6.0",
     "css-loader": "^3.4.2",
     "d3-ease": "^1.0.6",
     "mapbox-gl": "^1.7.0",
