--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@geo-maps/countries-land-10km": "^0.6.0",
     "css-loader": "^3.4.2",
     "d3-ease": "^1.0.6",
+    "frontmatter-markdown-loader": "^3.3.0",
     "mapbox-gl": "^1.7.0",
     "marked": "^0.8.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -51,6 +52,7 @@
     "redux": "^4.0.5",
     "reset-css": "^5.0.1",
     "sass-loader": "^8.0.2",
+    "slugify": "^1.4.0",
     "style-loader": "^1.1.3"
   }
 }
