--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "d3-ease": "^1.0.6",
     "dotenv-webpack": "^1.7.0",
     "frontmatter-markdown-loader": "^3.3.0",
+    "history": "^4.10.1",
     "mapbox-gl": "^1.7.0",
     "marked": "^0.8.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -46,6 +47,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
     "react-map-gl": "^5.2.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
